// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions - component should render actionObject as first action 1`] = `
<Fragment>
  <Component
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <Component
      onClick={[MockFunction]}
    >
      Some title
    </Component>
  </Component>
  <Component
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Component
      dropdownItems={
        Array [
          <Unknown
            className="ins-c-primary-toolbar__first-action "
            component="button"
            onClick={[Function]}
          >
            Some title
          </Unknown>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      toggle={
        <Unknown
          onToggle={[Function]}
        />
      }
    />
  </Component>
</Fragment>
`;

exports[`Actions - component should render actions and overflow 1`] = `
<Fragment>
  <Component
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </Component>
  <Component
    className=" ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Component
      dropdownItems={
        Array [
          <Unknown
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
          <Unknown
            component="button"
            onClick={[Function]}
          >
            Some title
          </Unknown>,
          <Unknown
            component="button"
            onClick={[Function]}
          >
            Custom props
          </Unknown>,
          <Unknown
            component="button"
            onClick={[Function]}
          >
            plain string
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions-separator"
          />,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Some title
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Custom props
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            plain string
          </Unknown>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      toggle={
        <Unknown
          onToggle={[Function]}
        />
      }
    />
  </Component>
</Fragment>
`;

exports[`Actions - component should render empty actions 1`] = `
<Fragment>
  <Component
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Component
      dropdownItems={
        Array [
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Some title
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Custom props
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            plain string
          </Unknown>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      toggle={
        <Unknown
          onToggle={[Function]}
        />
      }
    />
  </Component>
</Fragment>
`;

exports[`Actions - component should render just actions 1`] = `
<Fragment>
  <Component
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </Component>
  <Component
    className=" ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Component
      dropdownItems={
        Array [
          <Unknown
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
          <Unknown
            component="button"
            onClick={[Function]}
          >
            Some title
          </Unknown>,
          <Unknown
            component="button"
            onClick={[Function]}
          >
            Custom props
          </Unknown>,
          <Unknown
            component="button"
            onClick={[Function]}
          >
            plain string
          </Unknown>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      toggle={
        <Unknown
          onToggle={[Function]}
        />
      }
    />
  </Component>
</Fragment>
`;

exports[`Actions - component should render no data 1`] = `<Fragment />`;

exports[`Actions - component should render one action 1`] = `
<Fragment>
  <Component
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </Component>
  <Component
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Component
      dropdownItems={
        Array [
          <Unknown
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      toggle={
        <Unknown
          onToggle={[Function]}
        />
      }
    />
  </Component>
</Fragment>
`;

exports[`Actions - component should render one action and multiple overflow 1`] = `
<Fragment>
  <Component
    className="ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </Component>
  <Component
    className="ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <Component
      dropdownItems={
        Array [
          <Unknown
            className="ins-c-primary-toolbar__first-action "
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions-separator"
          />,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="div"
            onClick={[Function]}
          >
            <button
              onClick={[MockFunction]}
            >
              Some button
            </button>
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Some title
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            Custom props
          </Unknown>,
          <Unknown
            className="ins-c-primary-toolbar__overflow-actions"
            component="button"
            onClick={[Function]}
          >
            plain string
          </Unknown>,
        ]
      }
      isOpen={false}
      isPlain={true}
      onSelect={[Function]}
      toggle={
        <Unknown
          onToggle={[Function]}
        />
      }
    />
  </Component>
</Fragment>
`;

exports[`overflowActionsMapper should render action object 1`] = `
<div>
  <Component
    className="ins-c-primary-toolbar__overflow-actions"
    component="button"
    key="undefined-overflow"
    onClick={[Function]}
  >
    Some title
  </Component>
</div>
`;

exports[`overflowActionsMapper should render component 1`] = `
<div>
  <Component
    className="ins-c-primary-toolbar__overflow-actions"
    component="div"
    key="btn"
    onClick={[Function]}
  >
    <button
      key="btn"
      onClick={[MockFunction]}
    >
      Some button
    </button>
  </Component>
</div>
`;

exports[`overflowActionsMapper should render plain string 1`] = `
<div>
  <Component
    className="ins-c-primary-toolbar__overflow-actions"
    component="button"
    key="undefined-overflow"
    onClick={[Function]}
  >
    Custom props
  </Component>
</div>
`;
